Corrects margins for playlist-card. Also adds a few hardcoded playlists for demonstration purposes

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -25,6 +25,24 @@
                     <p class="playlist-number-of-likes">5</p>
                 </div>
             </section>
+            <section class="playlist-card">
+                <img class="playlist-cover-art" src="assets/img/playlist.png" alt="Playlist cover" width="175px">
+                <h2 class="playlist-title">Smooth Jazz</h2>
+                <p class="playlist-creator-name">Jerry Benson</p>
+                <div class="playlist-likes-container">
+                    <img class="playlist-heart-icon" src="assets/img/favicon.ico" alt="" width="20px">
+                    <p class="playlist-number-of-likes">5</p>
+                </div>
+            </section>
+            <section class="playlist-card">
+                <img class="playlist-cover-art" src="assets/img/playlist.png" alt="Playlist cover" width="175px">
+                <h2 class="playlist-title">Smooth Jazz</h2>
+                <p class="playlist-creator-name">Jerry Benson</p>
+                <div class="playlist-likes-container">
+                    <img class="playlist-heart-icon" src="assets/img/favicon.ico" alt="" width="20px">
+                    <p class="playlist-number-of-likes">5</p>
+                </div>
+            </section>
         </section>
     </main>
 
