Adds feature where one can click on a playlist and have the modal appear.

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <section class="playlist-cards">
-            <section class="playlist-card">
+            <section class="playlist-card" onclick="openModal({name: 'Test', creatorName: 'Tom', imageUrl: 'assets/img/favicon.ico'})">
                 <img class="playlist-cover-art" src="assets/img/playlist.png" alt="Playlist cover" width="175px">
                 <h2 class="playlist-title">Smooth Jazz</h2>
                 <p class="playlist-creator-name">Jerry Benson</p>
