Adds shuffle feature to modal

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -31,6 +31,7 @@
             <img id="playlist-image" src="assets/img/playlist.png" alt="Playlist Image">
             <h1 id="playlist-name"></h1>
             <p id="playlist-creator-name"></p>
+            <button id="playlist-shuffle-button">Shuffle!</button>
             <div id="songs-container">
                 <ul id="songs-list">
                 </ul>
