Adds feature where user can edit playlist title and author

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -41,6 +41,19 @@
         </div>
     </div>
 
+    <div id="playlist-edit-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <form id="playlist-edit-form">
+                <label>Playlist Title:</label><br>
+                <input type="text" id="form-playlist-title" name="playlist-title"><br>
+                <label>Playlist Author:</label><br>
+                <input type="text" id="form-playlist-author" name="playlist-author">
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    </div>
+
     <script src="data/data.js"></script>
     <script src="script.js"></script>
 </body>
