--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -17,6 +17,12 @@
         <a class="navigation-links" href="index.html">All</a>
         <a class="navigation-links" href="featured.html">Featured</a>
         <button id="add-playlist-button">Add Playlist</button>
+
+        <select name="sorts" id="sort-select">
+            <option value="A-Z">A-Z</option>
+            <option value="number-of-likes">Number of likes</option>
+            <option value="chronologically">Chronologically</option>
+        </select>
     </header>
 
     <main>
@@ -62,7 +68,9 @@
                 <label for="playlist-add-form">Playlist Title:</label><br>
                 <input type="text" id="form-add-playlist-title" name="playlist-title"><br>
                 <label for="playlist-add-form">Playlist Author:</label><br>
-                <input type="text" id="form-add-playlist-author" name="playlist-author">
+                <input type="text" id="form-add-playlist-author" name="playlist-author"><br>
+                <label for="playlist-add-form">Playlist Cover:</label><br>
+                <input type="text" id="form-add-playlist-cover" name="playlist-cover"><br>
 
                 <p>Songs</p>
                 <div class="playlist-add-song-container">
