Adds search field for later implementation and restarts implementation for sort

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -17,7 +17,10 @@
         <a class="navigation-links" href="index.html">All</a>
         <a class="navigation-links" href="featured.html">Featured</a>
         <button id="add-playlist-button">Add Playlist</button>
-
+        <form id="search-form">
+            <input type="search" placeholder="search">
+            <button type="submit">Submit</button>
+        </form>
         <select name="sorts" id="sort-select">
             <option value="A-Z">A-Z</option>
             <option value="number-of-likes">Number of likes</option>
